--- a/public/css/app.css
+++ b/public/css/app.css
@@ -597,6 +597,9 @@ video {
 .mt-1 {
   margin-top: 0.25rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -640,17 +643,11 @@ video {
   height: -moz-max-content;
   height: max-content;
 }
-.h-3 {
-  height: 0.75rem;
-}
-.h-auto {
-  height: auto;
-}
-.h-1 {
-  height: 0.25rem;
-}
 .h-10 {
   height: 2.5rem;
+}
+.h-3 {
+  height: 0.75rem;
 }
 .w-max {
   width: -moz-max-content;
@@ -688,12 +685,6 @@ video {
 }
 .w-40 {
   width: 10rem;
-}
-.w-auto {
-  width: auto;
-}
-.w-2\/12 {
-  width: 16.666667%;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -1267,6 +1258,8 @@ input {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
   padding: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   transition-duration: 300ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1451,14 +1444,14 @@ input {
   color: rgb(217 119 6 / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .hover\:text-rose-600:hover {
   --tw-text-opacity: 1;
   color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .active\:bg-transparent:active {
@@ -1542,10 +1535,6 @@ input {
     width: auto;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1579,10 +1568,6 @@ input {
 
   .lg\:hidden {
     display: none;
-  }
-
-  .lg\:w-6\/12 {
-    width: 50%;
   }
 
   .lg\:font-normal {
