--- a/public/css/app.css
+++ b/public/css/app.css
@@ -618,6 +618,9 @@ video {
 .inline-block {
   display: inline-block;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
@@ -704,6 +707,9 @@ video {
 .w-5 {
   width: 1.25rem;
 }
+.w-auto {
+  width: auto;
+}
 .max-w-xl {
   max-width: 36rem;
 }
@@ -729,6 +735,9 @@ video {
 }
 .cursor-default {
   cursor: default;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -793,6 +802,11 @@ video {
 }
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -981,6 +995,9 @@ video {
 }
 .text-center {
   text-align: center;
+}
+.\!text-center {
+  text-align: center !important;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -1525,6 +1542,21 @@ input {
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.hover\:text-indigo-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 
 .active\:bg-transparent:active {
