--- a/public/css/app.css
+++ b/public/css/app.css
@@ -618,9 +618,6 @@ video {
 .inline-block {
   display: inline-block;
 }
-.inline {
-  display: inline;
-}
 .flex {
   display: flex;
 }
@@ -692,6 +689,9 @@ video {
 .w-72 {
   width: 18rem;
 }
+.w-auto {
+  width: auto;
+}
 .w-3 {
   width: 0.75rem;
 }
@@ -706,9 +706,6 @@ video {
 }
 .w-5 {
   width: 1.25rem;
-}
-.w-auto {
-  width: auto;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -733,11 +730,11 @@ video {
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.cursor-default {
-  cursor: default;
-}
 .cursor-pointer {
   cursor: pointer;
+}
+.cursor-default {
+  cursor: default;
 }
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -803,11 +800,6 @@ video {
 .overflow-x-hidden {
   overflow-x: hidden;
 }
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -838,6 +830,9 @@ video {
 .border-2 {
   border-width: 2px;
 }
+.border-b {
+  border-bottom-width: 1px;
+}
 .border-current {
   border-color: currentColor;
 }
@@ -867,6 +862,9 @@ video {
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+.border-b-gray-200\/10 {
+  border-bottom-color: rgb(229 231 235 / 0.1);
 }
 .bg-gray-200 {
   --tw-bg-opacity: 1;
@@ -973,6 +971,10 @@ video {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
@@ -989,6 +991,9 @@ video {
 }
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 .pb-20 {
   padding-bottom: 5rem;
@@ -1035,11 +1040,11 @@ video {
 .font-medium {
   font-weight: 500;
 }
-.font-normal {
-  font-weight: 400;
-}
 .font-thin {
   font-weight: 100;
+}
+.font-normal {
+  font-weight: 400;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1084,6 +1089,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
 .text-amber-600 {
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity));
@@ -1091,10 +1100,6 @@ video {
 .text-amber-800 {
   --tw-text-opacity: 1;
   color: rgb(146 64 14 / var(--tw-text-opacity));
-}
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -1175,6 +1180,11 @@ video {
   overflow-x: hidden;
 }
 
+.vm-theme {
+  --fa-secondary-opacity: 1.0;
+  --fa-primary-color: orange;
+  --fa-secondary-color: rgb(108, 108, 108);
+}
 
 .sacrollbar {
   --scrollbar-track: initial;
@@ -1190,83 +1200,67 @@ video {
   overflow: overlay;
 }
 
-
 .sacrollbar.overflow-x-hidden {
   overflow-x: hidden;
 }
-
 
 .sacrollbar.overflow-y-hidden {
   overflow-y: hidden;
 }
 
-
 .sacrollbar::-webkit-scrollbar-track {
   background-color: var(--scrollbar-track);
 }
-
 
 .sacrollbar::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb);
 }
 
-
 .sacrollbar::-webkit-scrollbar-corner {
   background-color: var(--scrollbar-corner);
 }
-
 
 .sacrollbar::-webkit-scrollbar-track:hover {
   background-color: var(--scrollbar-track-hover);
 }
 
-
 .sacrollbar::-webkit-scrollbar-thumb:hover {
   background-color: var(--scrollbar-thumb-hover);
 }
-
 
 .sacrollbar::-webkit-scrollbar-corner:hover {
   background-color: var(--scrollbar-corner-hover);
 }
 
-
 .sacrollbar::-webkit-scrollbar-track:active {
   background-color: var(--scrollbar-track-active);
 }
-
 
 .sacrollbar::-webkit-scrollbar-thumb:active {
   background-color: var(--scrollbar-thumb-active);
 }
 
-
 .sacrollbar::-webkit-scrollbar-corner:active {
   background-color: var(--scrollbar-corner-active);
 }
 
-
 .sacrollbar {
   scrollbar-width: thin;
 }
-
 
 .sacrollbar::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 
-
 .sacrollbar {
   --scrollbar-track: rgb(156 163 175 / 0.5);
   --scrollbar-thumb: #1f2937;
 }
 
-
 .sacrollbar::-webkit-scrollbar-track {
   border-radius: 0.375rem;
 }
-
 
 .sacrollbar::-webkit-scrollbar-thumb {
   border-radius: 0.375rem;
@@ -1519,6 +1513,11 @@ input {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .hover\:text-amber-600:hover {
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity));
@@ -1542,21 +1541,6 @@ input {
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.hover\:text-indigo-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 
 .active\:bg-transparent:active {
