--- a/public/css/app.css
+++ b/public/css/app.css
@@ -727,17 +727,20 @@ video {
 .w-3 {
   width: 0.75rem;
 }
+.w-3\/12 {
+  width: 25%;
+}
+.w-16 {
+  width: 4rem;
+}
 .w-6\/12 {
   width: 50%;
 }
 .w-1\/12 {
   width: 8.333333%;
 }
-.w-3\/12 {
-  width: 25%;
-}
-.w-16 {
-  width: 4rem;
+.w-20 {
+  width: 5rem;
 }
 .w-4\/12 {
   width: 33.333333%;
@@ -869,6 +872,9 @@ video {
 }
 .self-start {
   align-self: flex-start;
+}
+.self-center {
+  align-self: center;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1028,6 +1034,12 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
+.bg-gray-600\/10 {
+  background-color: rgb(75 85 99 / 0.1);
+}
+.bg-lime-500\/50 {
+  background-color: rgb(132 204 22 / 0.5);
+}
 .bg-amber-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 230 138 / var(--tw-bg-opacity));
@@ -1035,13 +1047,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-lime-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
-}
-.bg-lime-500\/50 {
-  background-color: rgb(132 204 22 / 0.5);
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1109,21 +1114,25 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+.\!py-1 {
+  padding-top: 0.25rem !important;
+  padding-bottom: 0.25rem !important;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .pl-2 {
   padding-left: 0.5rem;
@@ -1271,13 +1280,29 @@ video {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
-.text-rose-400 {
-  --tw-text-opacity: 1;
-  color: rgb(251 113 133 / var(--tw-text-opacity));
-}
 .text-lime-500 {
   --tw-text-opacity: 1;
   color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+.text-rose-600 {
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.\!text-gray-800 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(31 41 55 / var(--tw-text-opacity)) !important;
+}
+.\!text-green-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
+}
+.text-rose-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 113 133 / var(--tw-text-opacity));
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -1291,35 +1316,12 @@ video {
   --tw-text-opacity: 1;
   color: rgb(146 64 14 / var(--tw-text-opacity));
 }
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
 .text-gray-900\/50 {
   color: rgb(17 24 39 / 0.5);
 }
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-.text-yellow-600 {
-  --tw-text-opacity: 1;
-  color: rgb(202 138 4 / var(--tw-text-opacity));
-}
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-.text-rose-600 {
-  --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
-}
-.caret-fuchsia-700 {
-  caret-color: #a21caf;
 }
 .opacity-0 {
   opacity: 0;
@@ -1345,6 +1347,10 @@ video {
 .shadow-gray-600 {
   --tw-shadow-color: #4b5563;
   --tw-shadow: var(--tw-shadow-colored);
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .ring-gray-300 {
   --tw-ring-opacity: 1;
@@ -1488,6 +1494,11 @@ input[type="number"]::-webkit-inner-spin-button,
     margin: 0;
   }
 
+option:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
+
 .reg-label {
   display: inline-block;
   font-size: 1.125rem;
@@ -1532,8 +1543,7 @@ input {
 .btn-primary {
   border-radius: 0.5rem;
   border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: currentColor;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -1665,10 +1675,6 @@ input {
     Animations - end
   ---- */
 
-.last\:self-start:last-child {
-  align-self: flex-start;
-}
-
 .odd\:bg-gray-100:nth-child(odd) {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1740,14 +1746,6 @@ input {
   cursor: pointer;
 }
 
-.hover\:border:hover {
-  border-width: 1px;
-}
-
-.hover\:border-0:hover {
-  border-width: 0px;
-}
-
 .hover\:border-gray-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
@@ -1792,10 +1790,6 @@ input {
   background-color: rgb(107 114 128 / 0.5);
 }
 
-.hover\:bg-current:hover {
-  background-color: currentColor;
-}
-
 .hover\:font-bold:hover {
   font-weight: 700;
 }
@@ -1818,6 +1812,11 @@ input {
 .hover\:text-rose-600:hover {
   --tw-text-opacity: 1;
   color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-100:hover {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1906,6 +1905,10 @@ input {
 
 @media (min-width: 768px) {
 
+  .md\:\!mt-0 {
+    margin-top: 0px !important;
+  }
+
   .md\:mb-6 {
     margin-bottom: 1.5rem;
   }
@@ -1973,10 +1976,6 @@ input {
     margin-top: 0.5rem;
   }
 
-  .lg\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -2003,10 +2002,6 @@ input {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-6 {
@@ -2058,10 +2053,6 @@ input {
 
   .lg\:pl-1 {
     padding-left: 0.25rem;
-  }
-
-  .lg\:pt-2 {
-    padding-top: 0.5rem;
   }
 
   .lg\:text-4xl {
